--- a/scratch-5-steps/pom.xml
+++ b/scratch-5-steps/pom.xml
@@ -37,12 +37,17 @@
 		</dependency>
 		 -->
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+	<!-- 
+	<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.8.0-alpha2</version>
+</dependency> -->
+
 		<dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-api</artifactId>
-    	<version>2.0.0-alpha1</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
 		</dependency>
-		
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -54,6 +59,12 @@
 			<groupId>javax.inject</groupId>
 			<artifactId>javax.inject</artifactId>
 			<version>1</version>
+		</dependency>
+		
+		<dependency>
+  		<groupId>javax.annotation</groupId>
+  		<artifactId>javax.annotation-api</artifactId>
+  		<version>1.3.2</version>
 		</dependency>
 		
 	</dependencies>
